# ChainGuard-SDK

./: .gitignore  BITCOIN_ISSUE_REPORT.md  BITCOIN_TEST_RESULTS.md  Cargo.toml  README.md  SDK_VERIFICATION.md  TESTING.md  canister_ids.json  chainguard-sdk-spec.md  dfx.json
examples/ai-agent/: .env.example  .gitignore  README.md  config.example.yaml  package.json
examples/ai-agent/src/: index.ts
examples/ai-agent/src/examples/: demo.ts
examples/ai-agent/src/strategies/: bitcoin_dca.ts  dca.ts  rebalance.ts
examples/ai-agent/src/utils/: chainguard-client.ts  config.ts
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/signatures/: page.tsx
frontend/app/strategies/: page.tsx
frontend/components/: NavigationLayout.tsx
frontend/lib/hooks/: useChainGuard.ts
frontend/lib/types/: chainguard.ts
scripts/: demo.sh  deploy.sh  init_example.sh  monitor_bitcoin_tx.sh  monitor_latest_tx.sh  monitor_new_tx.sh  test.sh  test_bitcoin.sh  test_bitcoin_wallet.sh  watch_tx.sh
src/chainguard/: Cargo.toml  chainguard.did
src/chainguard/src/: abi.rs  access_control.rs  audit.rs  btc_address.rs  btc_rpc.rs  btc_signing.rs  btc_transaction.rs  config.example.rs  errors.rs  evm_rpc.rs  executor.rs  lib.rs  stable_memory.rs  threshold.rs  types.rs  universal_router.rs
tests/: integration_tests.rs
