[package]
name = "chainguard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1.0.0"  # Official DFINITY CDK versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4"

# Ethereum transaction building and signing
ethers-core = "2.0"
num-bigint = "0.4"
num-traits = "0.2"

# EVM RPC canister types - use official package from DFINITY (main branch, compatible with ic-cdk 0.19)
evm_rpc_types = { git = "https://github.com/dfinity/evm-rpc-canister.git", branch = "main" }

# Bitcoin transaction building and signing - USING OFFICIAL DFINITY EXAMPLE CONFIG
bitcoin = "0.32.7"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.9"

getrandom = { version = "0.2.15", features = ["custom"] }

[dev-dependencies]
candid = "0.10"
