[package]
name = "chainguard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
hex = "0.4"

# Ethereum transaction building and signing
ethers-core = "2.0"
num-bigint = "0.4"
num-traits = "0.2"

# EVM RPC canister types - manual inter-canister calls
evm-rpc-canister-types = "5.0"

getrandom = { version = "0.2.15", features = ["custom"] }

[dev-dependencies]
candid = "0.10"
